Fixed some gaps, got the horizontal scrollbar to go away. Added some style and cleaned up some code

--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
 html{
-    height: 100vh;
-    width: 100vw;
     background-image: url(pics/zelda-all-links.png);
     background-position: center center;
     background-repeat: no-repeat;
@@ -8,22 +6,31 @@ html{
     background-size:cover;
     background-color: #464646;
 }
+#title img{
+    width: 100%;
+}
+
 #title, h1{
     text-align: center;
 }
 
 body{
+    margin: 0;
+    padding: 0;
+    overflow-x:auto;
     color: white;
     font-family: monospace;
     font-size: 20px;
-    height: 75vh;
 }
 
 #bio{
-    background-color: rgb(220, 186, 253);
+    width: 100%;
+    background-color: rgb(221, 194, 249);
 }
 #bio-text{
+    width:95vw;
     color: black;
+    margin:auto;
 }
 
 #profile-pic{
@@ -32,16 +39,25 @@ body{
 }
 
 #profile-pic img{
-
+    margin-top:25px;
     width: 300px;
     height: 300px;
     border-radius: 3px 3px;
 }
+
+#profile-pic img:hover{
+    transform: scale(1.5);
+    box-shadow: 0px 21px 12px 8px rgba(0,0,0,0.54);
+}
+
 #games-played, #future-games, #title{
     display: flex;
     justify-content:space-evenly;
     align-items: center;
     flex-wrap:wrap;
+}
+#games-played{
+    padding-bottom: 25px;
 }
 
 #game img{
@@ -50,11 +66,9 @@ body{
     box-shadow: 2px 4px black;
 }
 
-#title h1:hover{
-    cursor: pointer;
-}
 
 #game img:hover{
-    scale: 200%;
+    transform: scale(2);
     cursor: pointer;
+    overflow: hidden;
 }
